--- a/models/staging/__sources.yml
+++ b/models/staging/__sources.yml
@@ -2,8 +2,8 @@ version: 2
 
 sources:
   - name: jaffle_shop
-    database: raw
-    schema: new_jaffle_shop
+    database: amr_raw
+    schema: jaffle_shop
     description: E-commerce data
     tables:
       - name: customers
